**  denotes quite substantial/important changes
*** denotes really big changes 

1.8-10

* with bam(...,discrete=TRUE) terms like s(a,b,bs="re") had wrong p-value 
  computation applied, as a result of being treated as tensor product terms.
  Fixed.

1.8-9

* C level fix in bam(...,discrete=TRUE) code. Some memory was mistakenly 
  allocated via 'calloc' rather than 'R_chk_calloc', but was then freed
  via 'R_chk_free'. This could cause R to halt on some platforms.

1.8-8

** New "gp" smooth class (see ?gp.smooth) implemeting the Matern 
   covariance based Gaussian process model of Kamman and Wand (2003), and a 
   variety of other simple GP smoothers.

* some smooth plot methods now accept 'colors' and 'contour.col' argument to
  set color palette in image plots and contour line colors. 

* predict.gam and predict.bam now accept an 'exclude' argument allowing 
  terms (e.g. random effects) to be zeroed for prediction. For efficiency,
  smooth terms not in 'terms' or in 'exclude' are no longer evaluated, and 
  are instead set to zero or not returned. See ?predict.gam.

* ocat saturated likelihood definition changed to zero, leading to better 
  comprability of deviance between model fits (thanks to Herwig Friedl).

* null.deviance calculation for extended families modified to make more sense
  when `mu' is the mean of a latent variable, rather than the response itself. 

* bam now returns standarized residuals 'std.rsd' if `rho!=0'. 

* bam(...,discrete=TRUE) can now handle 'fs' terms.

* bam(...,discrete=TRUE) now accepts 'by' variables. Thanks to Zheyaun Li
  for debugging on this.

* bam now works with drop.unused.levels == TRUE when random effects should
  have more levels than those that exist in data. (Thanks Alec Leh) 

* bam chunk.size logic error fix - error could be triggered if chunk.size
  reset automaticlly to be larger than data size.

* uniqucombs can now accept a data frame with some or all factor columns,
  as well as purely numeric marices.
